--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   <div id="label-container">Upload a plant image</div>
 
   <script>
-    const URL = "./my_model/";
+    const URL = "";
     let model, maxPredictions;
 
     async function loadModel() {
-      const modelURL = URL + "model.json";
-      const metadataURL = URL + "metadata.json";
+      const modelURL = "model.json";
+      const metadataURL = "metadata.json";
       model = await tmImage.load(modelURL, metadataURL);
       maxPredictions = model.getTotalClasses();
       console.log("✅ Model loaded");
